# rp2040-esp32-azure-iot

./: .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.c
app/azure-iot/: nx_driver_esp_offload.c  sample_network.c  wifi.c  wifi.h
app/bsp/: lwesp_ll_raspberry_pi_pico_threadx.c
app/config/: lwesp_opts.h  nx_user.h
app/port/lwesp/: CMakeLists.txt  lwesp_ll_raspberry_pi_pico.c
lwesp/: CMakeLists.txt
lwesp/lwesp/src/: CMakeLists.txt
lwesp/snippets/: CMakeLists.txt
